[gd_scene load_steps=7 format=3 uid="uid://beki778ms24y2"]

[ext_resource type="Script" path="res://src/Menu/Menus.gd" id="1_4v2tk"]
[ext_resource type="Texture2D" uid="uid://dyhier8r6caxl" path="res://assets/Main_Menu.png" id="2_5n1eb"]

[sub_resource type="Animation" id="Animation_jka3p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_26po7"]
resource_name = "fade_in"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_igwwh"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7dh7j"]
_data = {
"RESET": SubResource("Animation_jka3p"),
"fade_in": SubResource("Animation_26po7"),
"fade_out": SubResource("Animation_igwwh")
}

[node name="MainMenu" type="Node2D"]
position = Vector2(-0.035, 0)

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_4v2tk")

[node name="MainSprite" type="Sprite2D" parent="MainMenu"]
position = Vector2(960, 540)
scale = Vector2(1.439, 1.433)
texture = ExtResource("2_5n1eb")

[node name="ColorRect" type="ColorRect" parent="MainMenu"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="PlayButton" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1260.0
offset_top = 80.0
offset_right = 1535.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
action_mode = 0
text = "Play"

[node name="OptionsButton" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 1280.0
offset_top = 250.0
offset_right = 1555.0
offset_bottom = 325.0
text = "Options"

[node name="QuitButton" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 1280.0
offset_top = 905.0
offset_right = 1555.0
offset_bottom = 980.0
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainMenu"]
libraries = {
"": SubResource("AnimationLibrary_7dh7j")
}

[connection signal="pressed" from="MainMenu/PlayButton" to="MainMenu" method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenu/OptionsButton" to="MainMenu" method="_on_options_button_pressed"]
[connection signal="pressed" from="MainMenu/QuitButton" to="MainMenu" method="_on_quit_button_pressed"]
